🐞fix jumpy card flip

--- a/src/style/card.scss
+++ b/src/style/card.scss
@@ -19,19 +19,9 @@ $radius: 8px;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    font-size: 1em;
-
-    .card.flipped {
-        transition-duration: 0.5s;
-        transform: rotatey(-180deg);
-        -ms-transform: rotatey(-180deg);
-        -moz-transform: rotatey(-180deg);
-        -webkit-transform: rotatey(-180deg);
-        -o-transform: rotatey(-180deg);
-        border-style: none;
-    }
 
     .card {
+        border-style: none;
         margin: $margin;
         -webkit-transform-style: preserve-3d;
         -webkit-transition: 0.5s;
@@ -43,6 +33,13 @@ $radius: 8px;
         -o-transition: 0.5s;
         transform-style: preserve-3d;
         transition: 0.5s;
+        &.flipped {
+            transform: rotatey(-180deg);
+            -ms-transform: rotatey(-180deg);
+            -moz-transform: rotatey(-180deg);
+            -webkit-transform: rotatey(-180deg);
+            -o-transform: rotatey(-180deg);
+        }
 
         .remove {
             height: 1rem;
@@ -76,7 +73,6 @@ $radius: 8px;
             -ms-backface-visibility: hidden;
             -o-backface-visibility: hidden;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
-            overflow: auto;
             border-radius: $radius;
             border-style: solid;
             border-width: 0;
@@ -87,13 +83,7 @@ $radius: 8px;
             -moz-transform: rotatey(-180deg);
             -webkit-transform: rotatey(-180deg);
             -o-transform: rotatey(-180deg);
-            overflow: hidden;
         }
-
-        .back {
-            display: flex;
-        }
-
     }
 
 }
