--- a/src/style/layout.scss
+++ b/src/style/layout.scss
@@ -32,7 +32,7 @@ nav{
         border-radius: 0.2rem;
         border-style: solid;
         width: 25rem;
-        z-index: 2;
+        z-index: 5;
         box-shadow: 0 0 5px black;
         padding: 1em;
         &.hidden {
